fix: fix test